--- a/SimpleGameLauncher/SimpleGameLauncher.csproj
+++ b/SimpleGameLauncher/SimpleGameLauncher.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="LiteDB" Version="5.0.15" />
+      <PackageReference Include="System.Data.SQLite" Version="1.0.117" />
     </ItemGroup>
 
 </Project>
