--- a/SimpleGameLauncher/SimpleGameLauncher.csproj
+++ b/SimpleGameLauncher/SimpleGameLauncher.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <PackageReference Include="LiteDB" Version="5.0.15" />
       <PackageReference Include="System.Data.SQLite" Version="1.0.117" />
+      <PackageReference Include="Tomlyn" Version="0.16.2" />
     </ItemGroup>
 
 </Project>
