--- a/SimpleGameLauncher/SimpleGameLauncher.csproj
+++ b/SimpleGameLauncher/SimpleGameLauncher.csproj
@@ -1,16 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>net7.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="LiteDB" Version="5.0.15" />
-      <PackageReference Include="System.Data.SQLite" Version="1.0.117" />
-      <PackageReference Include="Tomlyn" Version="0.16.2" />
-    </ItemGroup>
-
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.117"/>
+    <PackageReference Include="Tomlyn" Version="0.16.2"/>
+    <PackageReference Include="CommandLineParser" Version="2.8.0"/>
+  </ItemGroup>
 </Project>
